--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.1",
+    "dotenv": "^16.4.5",
+    "fetch": "^1.1.0",
+    "node": "^18.20.3",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
